RESOLVED FIXED27353
Images mispositioned on photo page
https://bugs.webkit.org/show_bug.cgi?id=27353
Summary Images mispositioned on photo page
Dave Hyatt
Reported 2009-07-16 14:45:09 PDT
The issue is a bug in how relative positioning percentages are resolved.
Attachments
Patch (31.71 KB, patch)
2009-07-16 14:53 PDT, Dave Hyatt
bdakin: review+
Marc A. Harnos
Comment 1 2009-07-16 14:49:28 PDT
I've temporary fixed the issue by removing the overflow:hidden from the elements with position right: 50%;
Dave Hyatt
Comment 2 2009-07-16 14:53:38 PDT
Beth Dakin
Comment 3 2009-07-16 14:55:50 PDT
Comment on attachment 32894 [details] Patch r=me
Dave Hyatt
Comment 4 2009-07-16 15:15:47 PDT
Fixed in r45988.
Note You need to log in before you can comment on or make changes to this bug.