WebCore:

2009-07-16  David Hyatt  <hyatt@apple.com>

        Reviewed by Beth Dakin.

        https://bugs.webkit.org/show_bug.cgi?id=27353
        Images mispositioned because of bug in percentage-based relative positioning.

        Added fast/css/nested-floating-relative-position-percentages.html

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::relativePositionOffsetX):

LayoutTests:

2009-07-16  David Hyatt  <hyatt@apple.com>

        Reviewed by Beth Dakin.

        https://bugs.webkit.org/show_bug.cgi?id=27353
        Images mispositioned because of bug in percentage-based relative positioning.

        * fast/css/nested-floating-relative-position-percentages.html: Added.
        * platform/mac/fast/css/nested-floating-relative-position-percentages-expected.checksum: Added.
        * platform/mac/fast/css/nested-floating-relative-position-percentages-expected.png: Added.
        * platform/mac/fast/css/nested-floating-relative-position-percentages-expected.txt: Added.



Canonical link: https://commits.webkit.org/37612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45988 268f45cc-cd09-0410-ab3c-d52691b4dbfc